blue_green/service-bluegreen.yaml
apiVersion: v1
kind: Service
metadata:
  name: itam-frontend-blue
  namespace: itam-production
  labels:
    app.kubernetes.io/name: itam-frontend
    environment: blue
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: itam-frontend
    version: 2026.8.0-stable
---
apiVersion: v1
kind: Service
metadata:
  name: itam-frontend-green
  namespace: itam-production
  labels:
    app.kubernetes.io/name: itam-frontend
    environment: green
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: itam-frontend
    version: 2026.8.1-rc2
